<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart Home</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="smarthome_remote">SmartHome Remote</string>
    <string name="home">Home</string>
    <string name="device">Device</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="status"><b>Status: %s</b></string>
    <string name="pulse" tools:keep="@string/pulse">Pulse</string>
    <string name="turn_off_light" tools:keep="@string/turn_off_light">Turn off light</string>
    <string name="turn_on_light" tools:keep="@string/turn_on_light">Turn on light</string>
    <string name="choose_action">Choose Action…</string>
    <string name="device_image">Device Image</string>
    <string name="edit">Edit</string>
    <string name="invalid_command" tools:keep="@string/invalid_command">Invalid Command Selected</string>
    <string name="welcome">Welcome %s!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="no_devices_msg">No devices yet. 🙁 Add one now by pressing the icon below!</string>
    <string name="log_out">Log out</string>
    <string name="fav_device">Favorite Device %s</string>
    <string name="invalid_signup_form">Please Complete this field</string>
    <string name="home_greeting">Hello <b>%s</b>, here\'s an overview of your connected devices.</string>
    <string name="name">%s</string>
    <string name="complete_sign_up">Complete Sign-up</string>
    <string name="welcome_to_smarthome">Welcome to SmartHome</string>
    <string name="username">Username</string>
    <string name="schedule_command">Schedule Command</string>
    <string name="delete_device">Delete Device</string>
    <string name="device_transition">device transition</string>
    <string name="enter_a_unique_device_name">Enter a unique device name</string>
    <string name="device_name">Device Name:</string>
    <string name="add_device">Add Device</string>
    <string name="set_as_favorite">Set as favorite</string>
    <string name="select_a_device_to_add">Select a device to add</string>
    <string name="poor_network_msg">We are currently experienceing poor netowrk conditions. Data may not be up-to-date</string>
</resources>
