<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/removeDevice"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_device"/>
    <item
        android:id="@+id/scheduleCommand"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_schedule_white_24dp"
        android:title="@string/schedule_command"/>
    <item
        android:id="@+id/setFavorite"
        android:enabled="true"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/set_as_favorite"
        app:showAsAction="ifRoom"/>
</menu>